Image size caroussel

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                                     <div class="carousel-inner h-100">
                                         <div class="carousel-item h-100 active">
                                             <img src="img/karate/dwight_karate1.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 1">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 1">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>Train Hard</h5>
                                                 <p>After hours of combat with some of the city's best teenagers...</p>
@@ -343,7 +343,7 @@
                                         </div>
                                         <div class="carousel-item h-100">
                                             <img src="img/karate/dwight_karate2.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 2">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 2">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>Black Belt Ceremony - Part 1</h5>
                                                 <p>... I earned my Black Belt in Goju Ryumartial Arts.</p>
@@ -351,7 +351,7 @@
                                         </div>
                                         <div class="carousel-item h-100">
                                             <img src="img/karate/dwight_karate4.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 3">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 3">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>Black Belt Ceremony - Part 2</h5>
                                                 <p>They are now four new deadly weapons in this office : Basher,
@@ -360,7 +360,7 @@
                                         </div>
                                         <div class="carousel-item h-100">
                                             <img src="img/karate/dwight_karate3.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 4">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 4">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>The Ultimate Weapon</h5>
                                                 <p>Now, I can submit any human being .</p>
@@ -421,7 +421,7 @@
                                     <div class="carousel-inner h-100">
                                         <div class="carousel-item h-100 active">
                                             <img src="img/genes/dwight_genes1.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 1">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 1">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>Basketball Tournament</h5>
                                                 <p>Winner and MVP of the Dunder Mifflin's BasketBall Tournament.</p>
@@ -429,7 +429,7 @@
                                         </div>
                                         <div class="carousel-item h-100">
                                             <img src="img/genes/dwight_genes2.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 2">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 2">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>Did you have your tickets ?</h5>
                                                 <p>To the GUN SHOW !</p>
@@ -437,7 +437,7 @@
                                         </div>
                                         <div class="carousel-item h-100">
                                             <img src="img/genes/dwight_genes3.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 3">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 3">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>I'm a leader !</h5>
                                                 <p>Go for the cliff. And three, two, one, JUMP ! You're dead, you're
@@ -498,7 +498,7 @@
                                     <div class="carousel-inner h-100">
                                         <div class="carousel-item h-100 active">
                                             <img src="img/paintball/dwight_paintball1.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 1">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 1">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>Tactics' Master</h5>
                                                 <p>I never let anyone walk behind me. Seven out of ten attacks are from
@@ -507,7 +507,7 @@
                                         </div>
                                         <div class="carousel-item h-100">
                                             <img src="img/paintball/dwight_paintball2.jpg"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 2">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 2">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>Eagle Vision</h5>
                                                 <p>Take that Sadam !</p>
@@ -515,7 +515,7 @@
                                         </div>
                                         <div class="carousel-item h-100">
                                             <img src="img/paintball/dwight_paintball3.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 3">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 3">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>Weapon Mastery</h5>
                                                 <p>I can hunt any animal with any weapon.</p>
@@ -576,7 +576,7 @@
                                     <div class="carousel-inner h-100">
                                         <div class="carousel-item h-100 active">
                                             <img src="img/german/dwight_german1.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 1">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 1">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>Speak German</h5>
                                                 <p>My german is pre-industrial and mostly religious.</p>
@@ -584,7 +584,7 @@
                                         </div>
                                         <div class="carousel-item h-100">
                                             <img src="img/german/dwight_german2.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 2">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 2">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>Belsnickel</h5>
                                                 <p>Belsnickel is a crotchety, fur-clad gift giver related to other
@@ -593,7 +593,7 @@
                                         </div>
                                         <div class="carousel-item h-100">
                                             <img src="img/german/dwight_german3.gif"
-                                                 class="rounded mx-auto d-block h-100 w-75" alt="Dwight Karate 3">
+                                                 class="rounded mx-auto d-block w-75" alt="Dwight Karate 3">
                                             <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 border border-warning text-light">
                                                 <h5>Authentic Pennsylvania Dutch Christmas</h5>
                                                 <p>The Belsnickel decides if you are impish or admirable.</p>
